[package]
name = "rust-discord-bot"
version = "0.1.0"
authors = ["Vlad <gerdoexx@gmail.com>"]
edition = "2018"

[dependencies.songbird]
path = "../../../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["client", "gateway", "rustls_backend", "voice", "model", "framework", "standard_framework"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
