[package]
name = "trdbwr"
version = "0.1.0"
authors = ["Vlad <gerdoexx@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
image = "0.23.14"
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
branch = "current"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "current"
features = ["client", "gateway", "voice", "model", "framework", "standard_framework"]

[dependencies.tokio]
version = "1.0"
features = ["signal", "macros", "rt-multi-thread"]
